# slack-emoji

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  build.rs
.github/workflows/: test.yml
src/: actions.rs  archive.rs  cli.rs  emoji.rs  main.rs  slack.rs
