[package]
name = "slack-emoji"
version = "0.1.0"
authors = ["Steve Franchak <stevefranchak@gmail.com>"]
description = "CLI tool for downloading emojis from or uploading emojis to a Slack workspace."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.0"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "3.0.0-beta.2"
futures = "0.3.12"
reqwest = { version = "0.11.0", features = ["json", "stream"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
tokio = { version = "1.2.0", features = ["full"] }
