[package]
name = "slack_emoji"
version = "0.1.0"
authors = ["Steve Franchak <stevefranchak@gmail.com>"]
description = "CLI tool for downloading emojis from or uploading emojis to a Slack workspace."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.0"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "3.0.0-beta.2"
colored = "2.0.0"
futures = "0.3.12"
log = "0.4.14"
loggerv = "0.7.2"
phf = "0.8.0"
reqwest = { version = "0.11.1", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
tokio = { version = "1.2.0", features = ["full"] }

[build-dependencies]
lazy_static = "1.4.0"
minreq = { version = "2.3.1", features = ["https", "json-using-serde"] }
phf_codegen = "0.8.0"
serde = { version = "1.0.123", features = ["derive"] }
# The semver crate requires that a version has at least three octets, and I'm not about that life
version-compare = "0.0.11"
